# supabase-schemas

./: .env.example  README.md  pyproject.toml
examples/: help.txt  sample-schema-list.txt  test-output.txt
src/: cli.py  schema_manager.py
src/supabase_schemas/: __init__.py  cli.py  schema_manager.py
supabase_schemas/: __init__.py  cli.py
tests/: test_schema_manager.py
