[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supabase-schemas"
version = "0.1.0"
description = "Per-tenant PostgreSQL schema manager for Supabase. Manages isolated schemas within a single Supabase instance."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["supabase", "postgres", "multi-tenant", "schema", "migration"]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
supabase-schemas = "supabase_schemas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["supabase_schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/ownmy-app/supabase-schemas"
